@@ -32,6 +32,7 @@
 
 // standard
 #include <stdbool.h>
+#include <stddef.h>                     /* for size_t */
 
 ///////////////////////////////////////////////////////////////////////////////
 
@@ -64,6 +65,8 @@ typedef YYLTYPE c_loc_t;
 
 // extern variables
 extern c_mode_t     c_mode;             // are we declaring or explaining?
+extern char const  *command_line;       // command from command line, if any
+extern size_t       command_line_len;   // length of command_line
 extern bool         is_input_a_tty;     // is our input from a tty?
 extern char const  *me;                 // program name
 
