@@ -23,6 +23,9 @@ that are not valid in the current language.
 Autocompletion is now slightly more context-sensitive in that it will offer
 only command keywords for the first word in the input.
 
+** Fixed command-line error printing
+Command-line input is now printed when there's an error.
+
 
 * Changes in Cdecl 3.1.5
 
